--- a/rostislove/narkomfin.html
+++ b/rostislove/narkomfin.html
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="javascripts/gallery.js"></script>
   </head>
   <body>
-    <div class="menubar">
+    <nav class="menubar">
       <a class="logo" href=""></a>
       <a href="">О проекте</a>
-    </div>
+    </nav>
     <nav class="sidebar">
       <ul>
         <li>
