--- a/rostislove/shukhov.html
+++ b/rostislove/shukhov.html
@@ -2,6 +2,7 @@
 <html>
   <head lang="ru">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Шухов, Владимир Григорьевич</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
@@ -32,7 +33,7 @@
           <ul>
             <li><a href="#s5s2">Развитие нефтяной отрасли и тепловых машин</a></li>
             <li><a href="#s5s3">Создание строительных и инженерных конструкций</a></li>
-            <li><a href="#s5s4">Фотогалерея конструкций</a></li> 
+            <li><a href="#s5s4">Фотогалерея конструкций</a></li>
           </ul>
         </li>
         <li><a href="#s6">Названы в честь Шухова и носят его имя</a></li>
@@ -46,6 +47,8 @@
       <h1>Владимир Григорьевич Шухов</h1>
       <p>русский, советский инженер, архитектор, изобретатель, учёный; член-корреспондент (1928) и почётный член (1929) Академии наук СССР, лауреат премии имени В. И. Ленина (1929), Герой Труда (1932). Является автором проектов и техническим руководителем строительства первых российских нефтепроводов (1878) и нефтеперерабатывающего завода с первыми российскими установками крекинга нефти (1931). Внёс выдающийся вклад в технологии нефтяной промышленности и трубопроводного транспорта.</p>
       <p>В. Г. Шухов первым в мире применил для строительства зданий и башен стальные сетчатые оболочки. Впоследствии архитекторы хай-тека, знаменитые Бакминстер Фуллер и Норман Фостер, — окончательно внедрили сетчатые оболочки в современную практику строительства, и в XXI веке оболочки стали одним из главных средств формообразования авангардных зданий. Шухов ввёл в архитектуру форму однополостного гиперболоида вращения, создав первые в мире гиперболоидные конструкции.</p>
+
+      <iframe width="auto" height="auto" src="https://www.youtube.com/embed/NMllaxuWp94?rel=0" frameborder="0" allowfullscreen></iframe>
 
       <h2 id="s1s1">Биография</h2>
       <h3 id="s1s2">Родители, детство</h3>
