--- a/rostislove/centrosouz.html
+++ b/rostislove/centrosouz.html
@@ -2,6 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Дом Центрсоюза</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
