--- a/rostislove/index.html
+++ b/rostislove/index.html
@@ -20,58 +20,77 @@
 
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
     <script type="text/javascript"src="javascripts/social-likes.min.js"></script>
-
-    <style media="screen">
-      body {
-        background-image: url(images/wikimedium-mockup.png);
-        background-repeat: no-repeat;
-        background-position: top center;
-      }
-    </style>
   </head>
   <body class="landing">
-    <!-- <nav class="menubar">
+    <nav class="menubar">
       <a class="logo" href="posts.html"></a>
       <a class="about" href="index.html">О проекте</a>
-    </nav> -->
+    </nav>
 
-    <section class="mainSection">
-      <section>
-        <h2>Наглядный пример,<br> чтобы учиться веб-вёрстке.</h2>
-        <p>Проект, разработанный командой Hæd Exchange, <br>для обучения основам веб-вёрстки в рамках <br>образовательного проекта Hack Exchange.</p>
-        <figure>
-          <img src="" alt="">
-        </figure>
+    <section class="landingWrapper">
+      <section class="mainSection left">
+        <section>
+          <h2>
+            Наглядный пример,<br>
+            чтобы учиться веб-вёрстке.
+          </h2>
+          <p>
+            Проект, разработанный командой Hæd Exchange,<br>
+            для обучения основам веб-вёрстки в рамках<br>
+            образовательного проекта Hack Exchange.
+          </p>
+          <figure></figure>
+        </section>
+        <figure class="mockup" id="mockup1"></figure>
       </section>
-    </section>
 
-    <section class="mainSection">
-      <section>
-        <h2>С нуля до первого сайт<br> под компьютеры, смартфоны <br>и планшеты.</h2>
-        <p>Чтобы начать изучать веб-вёрстку на этом проекте<br> не требуется каких-то специальных знаний, кроме<br> базого умения пользоваться компьютером.</p>
-        <figure>
-          <img src="" alt="">
-        </figure>
+      <section class="mainSection right">
+        <section>
+          <h2>
+            С нуля до первого сайт<br>
+            под компьютеры, смартфоны<br>
+            и планшеты.
+          </h2>
+          <p>
+            Чтобы начать изучать веб-вёрстку на этом проекте<br>
+            не требуется каких-то специальных знаний, кроме<br>
+            базого умения пользоваться компьютером.
+          </p>
+          <figure></figure>
+        </section>
+        <figure class="mockup" id="mockup2"></figure>
       </section>
-    </section>
 
-    <section class="mainSection">
-      <section>
-        <h2>Реальный проект, реальный <br>рабочий процесс.</h2>
-        <p>Обучение приближено к работе в реальной <br>жизни. Работа разбита на этапы от типографики, <br>создания меню и использования эффектов, <br>до адаптации под мобильные устройства <br>и использования скриптов.</p>
-        <figure>
-          <img src="" alt="">
-        </figure>
+      <section class="mainSection left">
+        <section>
+          <h2>
+            Реальный проект, реальный<br>
+            рабочий процесс.
+          </h2>
+          <p>
+            Обучение приближено к работе в реальной<br>
+            жизни. Работа разбита на этапы от типографики,<br>
+            создания меню и использования эффектов, <br>
+            до адаптации под мобильные устройства <br>
+            и использования скриптов.
+          </p>
+          <figure></figure>
+        </section>
+        <figure class="mockup" id="mockup3"></figure>
       </section>
-    </section>
 
-    <section class="mainSection">
-      <section>
-        <h2>Возможность самостоятельного<br> и курируемого обучения.</h2>
-        <p>Вы можете обучаться самостоятельно по исходному коду проекта, <br>выложенному на GitHub, или записаться на курс “Основы <br>веб-вёрстки с Захаром Днём” на Hack Exchange.</p>
-        <figure>
-          <img src="" alt="">
-        </figure>
+      <section class="mainSection center">
+        <section>
+          <h2>
+            Возможность самостоятельного<br>
+            и курируемого обучения.
+          </h2>
+          <p>
+            Вы можете обучаться самостоятельно по исходному коду проекта,<br>
+            выложенному на GitHub, или записаться на курс “Основы<br>
+            веб-вёрстки с Захаром Днём” на Hack Exchange.
+          </p>
+        </section>
       </section>
     </section>
 
