--- a/rostislove/index.html
+++ b/rostislove/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
     <script type="text/javascript"src="javascripts/social-likes.min.js"></script>
   </head>
-  <body class="landing">
+  <body class="landing bg">
     <nav class="menubar">
       <a class="logo" href="posts.html"></a>
       <a class="about" href="index.html">О проекте</a>
