--- a/rostislove/index.html
+++ b/rostislove/index.html
@@ -90,18 +90,27 @@
             выложенному на GitHub, или записаться на курс “Основы<br>
             веб-вёрстки с Захаром Днём” на Hack Exchange.
           </p>
+
+          <nav>
+            <a class="btn small white" href="http://github.com/rostislove">Исходный код на GitHub</a>
+            <a class="btn large green" href="http://lessons.hack.exchange">Курс на Hack Exchange</a>
+          </nav>
+
+          <footer>
+            <p>Пожалуйста, поделитесь знаниями с друзьями</p>
+
+            <div class="social-likes social-likes_single" data-single-title="Поделиться">
+              <div class="facebook" title="Поделиться ссылкой на Фейсбуке">Facebook</div>
+              <div class="twitter" title="Поделиться ссылкой в Твиттере">Twitter</div>
+              <div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Вконтакте</div>
+              <div class="odnoklassniki" title="Поделиться ссылкой в Одноклассниках">Одноклассники</div>
+            </div>
+          </footer>
         </section>
+
       </section>
     </section>
 
 
-    <footer class="share">
-      <div class="social-likes social-likes_single" data-single-title="Поделиться">
-      	<div class="facebook" title="Поделиться ссылкой на Фейсбуке">Facebook</div>
-      	<div class="twitter" title="Поделиться ссылкой в Твиттере">Twitter</div>
-      	<div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Вконтакте</div>
-      	<div class="odnoklassniki" title="Поделиться ссылкой в Одноклассниках">Одноклассники</div>
-      </div>
-    </footer>
   </body>
 </html>
