--- a/rostislove/index.html
+++ b/rostislove/index.html
@@ -15,8 +15,8 @@
     <title>Wikimedium</title>
 
     <link rel="stylesheet" href="stylesheets/style.css">
-    <link rel="icon" type="image/x-icon" href="../favicon.png"/>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="favicon.png"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
     <script type="text/javascript"src="javascripts/social-likes.min.js"></script>
@@ -31,7 +31,7 @@
       <section class="mainSection left">
         <section>
           <h2>
-            Наглядный пример,<br>
+            Наглядный пример,<br class="">
             чтобы учиться веб-вёрстке.
           </h2>
           <p>
@@ -86,9 +86,12 @@
             и курируемого обучения.
           </h2>
           <p>
-            Вы можете обучаться самостоятельно по исходному коду проекта,<br>
-            выложенному на GitHub, или записаться на курс “Основы<br>
-            веб-вёрстки с Захаром Днём” на Hack Exchange.
+            Вы можете обучаться самостоятельно по исходному<br class="compact">
+            коду проекта,<br class="compact">
+            выложенному на GitHub, или записаться<br class="compact">
+            на курс “Основы<br class="compact">
+            веб-вёрстки с Захаром Днём”<br class="compact">
+            на Hack Exchange.
           </p>
 
           <nav>
@@ -99,7 +102,7 @@
           <footer>
             <p>Пожалуйста, поделитесь знаниями с друзьями</p>
 
-            <div class="social-likes social-likes_single" data-single-title="Поделиться">
+            <div class="social-likes social-likes_single" data-url="http://wikimedium.hack.exchange/posts.html" data-single-title="Поделиться">
               <div class="facebook" title="Поделиться ссылкой на Фейсбуке">Facebook</div>
               <div class="twitter" title="Поделиться ссылкой в Твиттере">Twitter</div>
               <div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Вконтакте</div>
