--- a/rostislove/index.html
+++ b/rostislove/index.html
@@ -21,10 +21,12 @@
     <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
     <script type="text/javascript"src="javascripts/social-likes.min.js"></script>
   </head>
-  <body class="landing bg">
+  <body class="landing">
     <nav class="menubar">
-      <a class="logo" href="posts.html"></a>
-      <a class="about" href="index.html">О проекте</a>
+      <div>
+        <a class="logo" href="posts.html"></a>
+        <a class="about" href="index.html">О проекте</a>
+      </div>
     </nav>
 
     <section class="landingWrapper">
@@ -87,9 +89,9 @@
           </h2>
           <p>
             Вы можете обучаться самостоятельно по исходному<br class="compact">
-            коду проекта,<br class="compact">
+            коду проекта,<br class="full">
             выложенному на GitHub, или записаться<br class="compact">
-            на курс “Основы<br class="compact">
+            на курс “Основы<br class="full">
             веб-вёрстки с Захаром Днём”<br class="compact">
             на Hack Exchange.
           </p>
