--- a/rostislove/posts.html
+++ b/rostislove/posts.html
@@ -22,8 +22,10 @@
   </head>
   <body class="posts">
     <nav class="menubar">
-      <a class="logo" href="posts.html"></a>
-      <a class="about" href="index.html">О проекте</a>
+      <div>
+        <a class="logo" href="posts.html"></a>
+        <a class="about" href="index.html">О проекте</a>
+      </div>
     </nav>
 
     <section class="postsFeed">
@@ -47,7 +49,7 @@
     </section>
 
     <footer class="share">
-      <div class="social-likes social-likes_single" data-single-title="Поделиться">
+      <div class="social-likes social-likes_single" data-url="http://wikimedium.hack.exchange/posts.html" data-single-title="Поделиться">
       	<div class="facebook" title="Поделиться ссылкой на Фейсбуке">Facebook</div>
       	<div class="twitter" title="Поделиться ссылкой в Твиттере">Twitter</div>
       	<div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Вконтакте</div>
